--- a/frontend/natiart-app/src/app/product/components/customer/dashboard/dashboard.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/dashboard/dashboard.component.html
@@ -19,10 +19,7 @@
             pieces that are both functional and beautiful. Explore our collection and bring a touch
             of elegance to your home.
           </p>
-          <button
-            class="bg-transparent text-primary border border-primary px-4 py-2 rounded-full hover:bg-primary hover:text-white transition-colors text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50">
-            Learn More
-          </button>
+          <app-button color="secondary" size="md">Learn More</app-button>
         </div>
       </section>
     </div>
