--- a/frontend/natiart-app/src/app/product/components/customer/dashboard/top-banner/top-banner.component.html
+++ b/frontend/natiart-app/src/app/product/components/customer/dashboard/top-banner/top-banner.component.html
@@ -14,26 +14,19 @@
   </div>
 
   <!-- Navigation Arrows -->
-  <button (click)="prevSlide()"
-          class="absolute top-1/2 left-4 transform -translate-y-1/2 bg-white bg-opacity-50 hover:bg-opacity-75 p-2 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400">
+  <app-button (click)="prevSlide()" color="light" size="sm" shape="rounded-full" customClass="absolute top-1/2 left-4 transform -translate-y-1/2 shadow-md">
     <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path d="M15 19l-7-7 7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
     </svg>
-  </button>
-  <button (click)="nextSlide()"
-          class="absolute top-1/2 right-4 transform -translate-y-1/2 bg-white bg-opacity-50 hover:bg-opacity-75 p-2 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400">
+  </app-button>
+  <app-button (click)="nextSlide()" color="light" size="sm" shape="rounded-full" customClass="absolute top-1/2 right-4 transform -translate-y-1/2 shadow-md">
     <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path d="M9 5l7 7-7 7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
     </svg>
-  </button>
+  </app-button>
 
   <!-- Navigation Dots -->
   <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
-    <button (click)="goToSlide(i)"
-            *ngFor="let image of bannerImages; let i = index"
-            [class.bg-gray-400]="i !== currentBannerIndex"
-            [class.bg-white]="i === currentBannerIndex"
-            class="w-3 h-3 rounded-full transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400">
-    </button>
+    <app-button (click)="goToSlide(i)" *ngFor="let image of bannerImages; let i = index" [class.bg-gray-400]="i !== currentBannerIndex" [class.bg-white]="i === currentBannerIndex" customClass="w-3 h-3 rounded-full transition-colors duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400"></app-button>
   </div>
 </div>
