--- a/frontend/natiart-app/src/app/shared/components/shared/header/header.component.html
+++ b/frontend/natiart-app/src/app/shared/components/shared/header/header.component.html
@@ -20,12 +20,12 @@
           stroke-linecap="round" stroke-linejoin="round"
           stroke-width="2"/>
       </svg>
-      <button (click)="toggleMobileMenu()" class="md:hidden">
+      <app-button (click)="toggleMobileMenu()" color="link" size="sm" customClass="md:hidden">
         <svg class="w-5 h-5 text-secondary hover:text-primary" fill="none" stroke="currentColor"
              viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 6h16M4 12h16M4 18h16" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
         </svg>
-      </button>
+      </app-button>
     </div>
   </div>
   <!-- Mobile Menu -->
